--- a/02_EnYml/frontend_l_english.yml
+++ b/02_EnYml/frontend_l_english.yml
@@ -199,3 +199,6 @@
  ROM_lost_starting_state:0 "Romania lost one of its starting states"
  YUG_delcared_war_on_axis_allies:0 "Declared war on Axis or Allies while in either Axis or Allies"
  achievement_carol_II_is_leader:0 "§YCarol II§! is the current country leader"
+ CHAT_ERROR_MUTE_MISSINGARGS:0 "Invalid syntax, expected: /mute <username>"
+ CHAT_ERROR_UNMUTE_MISSINGARGS:0 "Invalid syntax, expected: /unmute <username>"
+ CHAT_ERROR_MUTEUNMUTE_SELF:0 "You cannot mute or unmute yourself!"
