--- a/02_EnYml/musicplayer_l_english.yml
+++ b/02_EnYml/musicplayer_l_english.yml
@@ -8,7 +8,7 @@
  MUSICPLAYER_SHUFFLE_OFF:0 "No Shuffle"
  MUSICPLAYER_SHUFFLE_USER_FUNCTION:0 "Weighted shuffle"
  MUSICPLAYER_TIME_MIN_SEC:1 "$MIN$:$SEC$"
- MUSICPLAYER_OPEN_PLAYER:0 "Open musicplayer"
+ MUSICPLAYER_OPEN_PLAYER:0 "Open Music Player"
  MUSICPLAYER_TOGGLE_CONTROLLER:0 "Toggle music controller"
  MUSICPLAYER_PLAY_TRACK:0 "Play track"
  MUSICPLAYER_DISABLE_TRACK:0 "Disable track"
