--- a/04_EnProperties/core_l_english.properties
+++ b/04_EnProperties/core_l_english.properties
@@ -318,6 +318,7 @@ MENU_BAR_SAVED_GAME_RULES_FILENAME코0=Saved game rules filename:
 MENU_BAR_SAVE_PLAY코0=Save & Play
 MENU_BAR_IRONMAN_SAVE코0=Ironman Save Game
 MENU_BAR_IRONMAN_PLAIN코0=Ironman
+MENU_ACHIEVEMENTS코0=Hearts of Iron IV Achievements
 MENU_HOMEPAGE코0=Hearts of Iron IV Homepage
 MENU_FORUM코0=Hearts of Iron IV Forum
 MENU_FACEBOOK코0=Hearts of Iron IV Facebook
@@ -1641,4 +1642,11 @@ FLEET_MAX_TASKFORCE_DESCRIPTION코0=$ADMIRAL|H$ can lead at most $NUM|H$ active 
 FLEET_OVERCAPACITY_DESCRIPTION코0=Over capacity status of your fleet will reduce the admiral's effectiveness to $VALUE|%.0R$
 TEMPORARILY_DETACHED코0=§HTemporarily Detached:§!
 MODIFIED_BY코0=§HModified by:§!
-
+FE_IRONMAN_NOPOPS_TOOLTIP코0=Ironman requires the user to be logged in with Paradox account.
+MSGRDK_SIGNIN_FAILED_TITLE코0=There was a problem
+MSGRDK_SIGNIN_FAILED_TEXT코0=We couldn't sign you in with your Microsoft account. Some game features may be unavailable.
+MSGRDK_NO_PERMISSION_TITLE코0=Account permission
+MSGRDK_NO_UGC_TEXT코0=You have no permission to access user generated content. Mods will be disabled.
+MSGRDK_NO_MULTIPLAYER_TEXT코0=You must be signed in to a user profile with multiplayer privileges to play online
+MSGRDK_COMMUNICATIONS_UNAVAILABLE_PRIVILEGE_CHAT코0=*** Message was blocked due to lack of the Communication privilege on your user profile ***
+MSGRDK_UGC_MULTIPLAYER_UNAVAILABLE코0=Blocked due to lack of User Generated Content privilege for your Microsoft account
