--- a/04_EnProperties/frontend_l_english.properties
+++ b/04_EnProperties/frontend_l_english.properties
@@ -198,3 +198,6 @@ achievement_EGY_free코0=Reached Freedom Status
 ROM_lost_starting_state코0=Romania lost one of its starting states
 YUG_delcared_war_on_axis_allies코0=Declared war on Axis or Allies while in either Axis or Allies
 achievement_carol_II_is_leader코0=§YCarol II§! is the current country leader
+CHAT_ERROR_MUTE_MISSINGARGS코0=Invalid syntax, expected: /mute <username>
+CHAT_ERROR_UNMUTE_MISSINGARGS코0=Invalid syntax, expected: /unmute <username>
+CHAT_ERROR_MUTEUNMUTE_SELF코0=You cannot mute or unmute yourself!
