--- a/04_EnProperties/musicplayer_l_english.properties
+++ b/04_EnProperties/musicplayer_l_english.properties
@@ -7,7 +7,7 @@ MUSICPLAYER_SHUFFLE_ON코0=Shuffle
 MUSICPLAYER_SHUFFLE_OFF코0=No Shuffle
 MUSICPLAYER_SHUFFLE_USER_FUNCTION코0=Weighted shuffle
 MUSICPLAYER_TIME_MIN_SEC코1=$MIN$:$SEC$
-MUSICPLAYER_OPEN_PLAYER코0=Open musicplayer
+MUSICPLAYER_OPEN_PLAYER코0=Open Music Player
 MUSICPLAYER_TOGGLE_CONTROLLER코0=Toggle music controller
 MUSICPLAYER_PLAY_TRACK코0=Play track
 MUSICPLAYER_DISABLE_TRACK코0=Disable track
