--- a/04_EnProperties/countries_cosmetic_l_english.properties
+++ b/04_EnProperties/countries_cosmetic_l_english.properties
@@ -850,7 +850,7 @@ BAS_autonomy_collaboration_government_DEF코0=the $OVERLORDADJ$ $NONIDEOLOGY$
 GUM_autonomy_collaboration_government_DEF코0=the $OVERLORDADJ$ $NONIDEOLOGY$
 SOL_autonomy_collaboration_government_DEF코0=the $OVERLORDADJ$ $NONIDEOLOGY$
 NAV_autonomy_collaboration_government_DEF코0=the $OVERLORDADJ$ $NONIDEOLOGY$
-COUNTRY_autonomy_collaboration_government코0=$OVERLORDADJ$ $NONIDEOLOGY$" #fallbacks for Collaboration governments
+COUNTRY_autonomy_collaboration_government코0=$OVERLORDADJ$ $NONIDEOLOGY$
 COUNTRY_autonomy_collaboration_government_DEF코0=$OVERLORDADJ$ $NONIDEOLOGYDEF$
 COUNTRY_autonomy_collaboration_government_ADJ코0=$OVERLORDADJ$ $NONIDEOLOGYADJ$
 united_polynesia_democratic코0=Pacific Federation
