--- a/04_EnProperties/parties_l_english.properties
+++ b/04_EnProperties/parties_l_english.properties
@@ -495,32 +495,32 @@ ISR_communism_party코0=Maki
 ISR_democratic_party코0=Mapai
 ISR_fascism_party코0=Helpam
 ISR_neutrality_party코0=Central Council
-VIN_fascism_party코0=Vietnamese Restoration League" #or Reformation Society
-VIN_democratic_party코0=Can Lao Party" #formed in early 50s
-VIN_communism_party코0=Communist Party of Vietnam" #Viet Minh was more important in early years
+VIN_fascism_party코0=Vietnamese Restoration League
+VIN_democratic_party코0=Can Lao Party
+VIN_communism_party코0=Communist Party of Vietnam
 VIN_neutrality_party코0=Viêt Nam Quoc Dân Đang
 CAM_fascism_party코0=Khmerite Party
-CAM_democratic_party코0=Democratic Party" #formed in 1946
-CAM_communism_party코0=Communist Party of Kampuchea" # aka Khmer Communist Party or a different party Krom Pracheachon aka Krom
-CAM_neutrality_party코0=Sangkum Reastr Niyum" # or just Sangkum 1955, democratic but right leaning and anti communist
-INS_fascism_party코0=New Order" #inspired by right wingers from 1960s
-INS_democratic_party코0=PNI" #Indonesian National Party founded by Sukarno
-INS_communism_party코0=PKI" #Partai Komunis Indonesia
-INS_neutrality_party코0=Democrats" #made up, in reality this guy was a member of PNI
+CAM_democratic_party코0=Democratic Party
+CAM_communism_party코0=Communist Party of Kampuchea
+CAM_neutrality_party코0=Sangkum Reastr Niyum
+INS_fascism_party코0=New Order
+INS_democratic_party코0=PNI
+INS_communism_party코0=PKI
+INS_neutrality_party코0=Democrats
 MAL_fascism_party코0=Panoceanic Unionists
-MAL_democratic_party코0=United Malays National Organisation" #or UMNO or PEKEMBAR
-MAL_communism_party코0=Malayan Communist Party" #or MCP
-MAL_neutrality_party코0=Kesatuan Melayu Muda" #or KMM
+MAL_democratic_party코0=United Malays National Organisation
+MAL_communism_party코0=Malayan Communist Party
+MAL_neutrality_party코0=Kesatuan Melayu Muda
 LAO_fascism_party코0=Tribal Centralization Party
 LAO_democratic_party코0=Democratic Party
 LAO_communism_party코0=Pathet Lao
 LAO_neutrality_party코0=Royalists
 MNT_fascism_party코0=Greens
 MNT_democratic_party코0=Democracy League
-MNT_communism_party코0=Communist Party of Montenegro" #or KPCG
-MNT_neutrality_party코0=Federalist Party" # Montenegrin ultra nationalists, start democtratic right wing but went full fascist collaboration in 41'
+MNT_communism_party코0=Communist Party of Montenegro
+MNT_neutrality_party코0=Federalist Party
 UKR_fascism_party코0=OUN
-UKR_democratic_party코0=Ukrainian National Democratic Alliance" # or UNDO
+UKR_democratic_party코0=Ukrainian National Democratic Alliance
 UKR_communism_party코0=Communist Party of Ukraine
 UKR_neutrality_party코0=Ukrainian Progress Party
 GEO_fascism_party코0=Tbilisi Council
@@ -536,7 +536,7 @@ AZR_democratic_party코0=Müsavat
 AZR_communism_party코0=Communist Party of Azerbaijan
 AZR_neutrality_party코0=Ittihad
 ARM_fascism_party코0=Armenian Legion
-ARM_democratic_party코0=Armenian Revolutionary Federation" #or ARF
+ARM_democratic_party코0=Armenian Revolutionary Federation
 ARM_communism_party코0=Communist Party of Armenia
 ARM_neutrality_party코0=Central Authority
 BLR_fascism_party코0=Belarusian Central Council
