--- a/02_EnYml/countries_cosmetic_l_english.yml
+++ b/02_EnYml/countries_cosmetic_l_english.yml
@@ -851,7 +851,7 @@
  GUM_autonomy_collaboration_government_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
  SOL_autonomy_collaboration_government_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
  NAV_autonomy_collaboration_government_DEF:0 "the $OVERLORDADJ$ $NONIDEOLOGY$"
- COUNTRY_autonomy_collaboration_government:0 "$OVERLORDADJ$ $NONIDEOLOGY$" #fallbacks for Collaboration governments
+ COUNTRY_autonomy_collaboration_government:0 "$OVERLORDADJ$ $NONIDEOLOGY$"
  COUNTRY_autonomy_collaboration_government_DEF:0 "$OVERLORDADJ$ $NONIDEOLOGYDEF$"
  COUNTRY_autonomy_collaboration_government_ADJ:0 "$OVERLORDADJ$ $NONIDEOLOGYADJ$"
  united_polynesia_democratic:0 "Pacific Federation"
