--- a/02_EnYml/parties_l_english.yml
+++ b/02_EnYml/parties_l_english.yml
@@ -496,32 +496,32 @@
  ISR_democratic_party:0 "Mapai"
  ISR_fascism_party:0 "Helpam"
  ISR_neutrality_party:0 "Central Council"
- VIN_fascism_party:0 "Vietnamese Restoration League" #or Reformation Society   
- VIN_democratic_party:0 "Can Lao Party" #formed in early 50s
- VIN_communism_party:0 "Communist Party of Vietnam" #Viet Minh was more important in early years
+ VIN_fascism_party:0 "Vietnamese Restoration League"
+ VIN_democratic_party:0 "Can Lao Party"
+ VIN_communism_party:0 "Communist Party of Vietnam"
  VIN_neutrality_party:0 "Viêt Nam Quoc Dân Đang"
  CAM_fascism_party:0 "Khmerite Party"
- CAM_democratic_party:0 "Democratic Party" #formed in 1946 
- CAM_communism_party:0 "Communist Party of Kampuchea" # aka Khmer Communist Party or a different party Krom Pracheachon aka Krom
- CAM_neutrality_party:0 "Sangkum Reastr Niyum" # or just Sangkum 1955, democratic but right leaning and anti communist
- INS_fascism_party:0 "New Order" #inspired by right wingers from 1960s
- INS_democratic_party:0 "PNI" #Indonesian National Party founded by Sukarno
- INS_communism_party:0 "PKI" #Partai Komunis Indonesia
- INS_neutrality_party:0 "Democrats" #made up, in reality this guy was a member of PNI 
+ CAM_democratic_party:0 "Democratic Party"
+ CAM_communism_party:0 "Communist Party of Kampuchea"
+ CAM_neutrality_party:0 "Sangkum Reastr Niyum"
+ INS_fascism_party:0 "New Order"
+ INS_democratic_party:0 "PNI"
+ INS_communism_party:0 "PKI"
+ INS_neutrality_party:0 "Democrats"
  MAL_fascism_party:0 "Panoceanic Unionists"
- MAL_democratic_party:0 "United Malays National Organisation" #or UMNO or PEKEMBAR
- MAL_communism_party:0 "Malayan Communist Party" #or MCP
- MAL_neutrality_party:0 "Kesatuan Melayu Muda" #or KMM 
+ MAL_democratic_party:0 "United Malays National Organisation"
+ MAL_communism_party:0 "Malayan Communist Party"
+ MAL_neutrality_party:0 "Kesatuan Melayu Muda"
  LAO_fascism_party:0 "Tribal Centralization Party"
  LAO_democratic_party:0 "Democratic Party"
  LAO_communism_party:0 "Pathet Lao"
  LAO_neutrality_party:0 "Royalists"
  MNT_fascism_party:0 "Greens"
  MNT_democratic_party:0 "Democracy League"
- MNT_communism_party:0 "Communist Party of Montenegro" #or KPCG
- MNT_neutrality_party:0 "Federalist Party" # Montenegrin ultra nationalists, start democtratic right wing but went full fascist collaboration in 41'
+ MNT_communism_party:0 "Communist Party of Montenegro"
+ MNT_neutrality_party:0 "Federalist Party"
  UKR_fascism_party:0 "OUN"
- UKR_democratic_party:0 "Ukrainian National Democratic Alliance" # or UNDO
+ UKR_democratic_party:0 "Ukrainian National Democratic Alliance"
  UKR_communism_party:0 "Communist Party of Ukraine"
  UKR_neutrality_party:0 "Ukrainian Progress Party"
  GEO_fascism_party:0 "Tbilisi Council"
@@ -537,7 +537,7 @@
  AZR_communism_party:0 "Communist Party of Azerbaijan"
  AZR_neutrality_party:0 "Ittihad"
  ARM_fascism_party:0 "Armenian Legion"
- ARM_democratic_party:0 "Armenian Revolutionary Federation" #or ARF 
+ ARM_democratic_party:0 "Armenian Revolutionary Federation"
  ARM_communism_party:0 "Communist Party of Armenia"
  ARM_neutrality_party:0 "Central Authority"
  BLR_fascism_party:0 "Belarusian Central Council"
