--- a/04_EnProperties/politics_l_english.properties
+++ b/04_EnProperties/politics_l_english.properties
@@ -1,5 +1,4 @@
-﻿#POLITICS_SUBGOAL_HEADER:0 "$NAME$ ($COLOR$$PROGRESS|%0$§!):"
-POLITICS_SUBGOAL코0=Objective #$NUMBER$
+﻿POLITICS_SUBGOAL코0=Objective #$NUMBER$
 DRIFT_DIM_RETURN코0=Party Inertia: §R-$VAL$§!\n
 POL_DAILY_CHANGE코0=Daily Change: $VAL$
 POL_OTHERS_DRIFT코0=Due to the changes in other parties: $VAL$
